--- a/app/views/home.html
+++ b/app/views/home.html
@@ -346,9 +346,16 @@ _________________________________________________________ -->
         </div>
         <div class="item">
             <a href="#">
-                <img src="img/style02.jpg" alt="" class="img-responsive">
+                <img src="img/style2.jpg" alt="" class="img-responsive">
             </a>
         </div>
+
+        <div class="item">
+            <a href="#">
+                <img src="img/style5.jpg" alt="" class="img-responsive">
+            </a>
+        </div>
+
         <div class="item">
             <a href="#">
                 <img src="img/style6.jpg" alt="" class="img-responsive">
@@ -357,13 +364,96 @@ _________________________________________________________ -->
 
         <div class="item">
             <a href="#">
-                <img src="img/style00.jpg" alt="" class="img-responsive">
+                <img src="img/style7.jpg" alt="" class="img-responsive">
             </a>
         </div>
 
         <div class="item">
             <a href="#">
-                <img src="img/style99.jpg" alt="" class="img-responsive">
+                <img src="img/style1.jpg" alt="" class="img-responsive">
+            </a>
+        </div>
+        <div class="item">
+            <a href="#">
+                <img src="img/style2.jpg" alt="" class="img-responsive">
+            </a>
+        </div>
+
+
+        <div class="item">
+            <a href="#">
+                <img src="img/style5.jpg" alt="" class="img-responsive">
+            </a>
+        </div>
+
+        <div class="item">
+            <a href="#">
+                <img src="img/style6.jpg" alt="" class="img-responsive">
+            </a>
+        </div>
+
+        <div class="item">
+            <a href="#">
+                <img src="img/style7.jpg" alt="" class="img-responsive">
+            </a>
+        </div>
+
+        <div class="item">
+            <a href="#">
+                <img src="img/style1.jpg" alt="" class="img-responsive">
+            </a>
+        </div>
+        <div class="item">
+            <a href="#">
+                <img src="img/style2.jpg" alt="" class="img-responsive">
+            </a>
+        </div>
+
+        <div class="item">
+            <a href="#">
+                <img src="img/style5.jpg" alt="" class="img-responsive">
+            </a>
+        </div>
+
+        <div class="item">
+            <a href="#">
+                <img src="img/style6.jpg" alt="" class="img-responsive">
+            </a>
+        </div>
+
+        <div class="item">
+            <a href="#">
+                <img src="img/style7.jpg" alt="" class="img-responsive">
+            </a>
+        </div>
+
+        <div class="item">
+            <a href="#">
+                <img src="img/style1.jpg" alt="" class="img-responsive">
+            </a>
+        </div>
+        <div class="item">
+            <a href="#">
+                <img src="img/style2.jpg" alt="" class="img-responsive">
+            </a>
+        </div>
+
+
+        <div class="item">
+            <a href="#">
+                <img src="img/style5.jpg" alt="" class="img-responsive">
+            </a>
+        </div>
+
+        <div class="item">
+            <a href="#">
+                <img src="img/style6.jpg" alt="" class="img-responsive">
+            </a>
+        </div>
+
+        <div class="item">
+            <a href="#">
+                <img src="img/style7.jpg" alt="" class="img-responsive">
             </a>
         </div>
 
