--- a/app/views/stylist.html
+++ b/app/views/stylist.html
@@ -1,9 +1,9 @@
 
             <div id="stylist-intro" style="width: 100%; height: 592px;">
-                    <div class="item" style="width: 1390px; height: 592px;">
+                    <div class="item" style="width: 100%; height: 592px;">
                         <div class="container">
                             <div class="row">
-                                <div class="carousel-caption">
+                                <div class="carousel-caption text-center">
                                     <h1>MEET SOFIA</h1>
                                     <h3>#modern #day-to-night #office-chic</h3>
                                   
@@ -257,9 +257,16 @@
         </div>
         <div class="item">
             <a href="#">
-                <img src="img/style02.jpg" alt="" class="img-responsive">
+                <img src="img/style2.jpg" alt="" class="img-responsive">
             </a>
         </div>
+
+        <div class="item">
+            <a href="#">
+                <img src="img/style5.jpg" alt="" class="img-responsive">
+            </a>
+        </div>
+
         <div class="item">
             <a href="#">
                 <img src="img/style6.jpg" alt="" class="img-responsive">
@@ -268,13 +275,96 @@
 
         <div class="item">
             <a href="#">
-                <img src="img/style00.jpg" alt="" class="img-responsive">
+                <img src="img/style7.jpg" alt="" class="img-responsive">
             </a>
         </div>
 
         <div class="item">
             <a href="#">
-                <img src="img/style99.jpg" alt="" class="img-responsive">
+                <img src="img/style1.jpg" alt="" class="img-responsive">
+            </a>
+        </div>
+        <div class="item">
+            <a href="#">
+                <img src="img/style2.jpg" alt="" class="img-responsive">
+            </a>
+        </div>
+
+
+        <div class="item">
+            <a href="#">
+                <img src="img/style5.jpg" alt="" class="img-responsive">
+            </a>
+        </div>
+
+        <div class="item">
+            <a href="#">
+                <img src="img/style6.jpg" alt="" class="img-responsive">
+            </a>
+        </div>
+
+        <div class="item">
+            <a href="#">
+                <img src="img/style7.jpg" alt="" class="img-responsive">
+            </a>
+        </div>
+
+        <div class="item">
+            <a href="#">
+                <img src="img/style1.jpg" alt="" class="img-responsive">
+            </a>
+        </div>
+        <div class="item">
+            <a href="#">
+                <img src="img/style2.jpg" alt="" class="img-responsive">
+            </a>
+        </div>
+
+        <div class="item">
+            <a href="#">
+                <img src="img/style5.jpg" alt="" class="img-responsive">
+            </a>
+        </div>
+
+        <div class="item">
+            <a href="#">
+                <img src="img/style6.jpg" alt="" class="img-responsive">
+            </a>
+        </div>
+
+        <div class="item">
+            <a href="#">
+                <img src="img/style7.jpg" alt="" class="img-responsive">
+            </a>
+        </div>
+
+        <div class="item">
+            <a href="#">
+                <img src="img/style1.jpg" alt="" class="img-responsive">
+            </a>
+        </div>
+        <div class="item">
+            <a href="#">
+                <img src="img/style2.jpg" alt="" class="img-responsive">
+            </a>
+        </div>
+
+
+        <div class="item">
+            <a href="#">
+                <img src="img/style5.jpg" alt="" class="img-responsive">
+            </a>
+        </div>
+
+        <div class="item">
+            <a href="#">
+                <img src="img/style6.jpg" alt="" class="img-responsive">
+            </a>
+        </div>
+
+        <div class="item">
+            <a href="#">
+                <img src="img/style7.jpg" alt="" class="img-responsive">
             </a>
         </div>
 
