--- a/app/views/home.html
+++ b/app/views/home.html
@@ -102,7 +102,7 @@ _________________________________________________________ -->
                         <h3>3: Get Styled!</h3>
                         <div class="image">
                             <a href="detail.html">
-                                <img src="img/outfit55.jpg" alt="" class="img-responsive image1">
+                                <img src="img/styles66.jpg" alt="" class="img-responsive image1">
                             </a>
                         </div>
                         <br />
