--- a/app/views/main.html
+++ b/app/views/main.html
@@ -61,9 +61,8 @@ _________________________________________________________ -->
         </div>
 
         <div class="navbar-collapse collapse right">
-            <button type="button" class="btn navbar-btn btn-default" data-toggle="modal" data-target="#login-modal">
-                <span class="sr-only">User login</span>
-                Apply to be a stylist
+            <button type="button" class="btn navbar-btn btn-default">
+                       Apply to be a stylist
             </button>
         </div>
 
