--- a/app/views/stylist.html
+++ b/app/views/stylist.html
@@ -7,9 +7,9 @@
                                     <h1>MEET SOFIA</h1>
                                     <h3>#modern #day-to-night #office-chic</h3>
                                   
-                                    <button type="button" class="btn btn-primary navbar-btn">
+                                    <a type="button" class="btn btn-primary navbar-btn" ui-sref="question" target="_blank">
                                     BOOK NOW
-                                   </button>
+                                   </a>
                             
                                 </div>
                             </div>
